[project]
name = "santa-numba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "countryinfo>=0.1.2",
    "folium>=0.20.0",
    "haversine>=2.9.0",
    "ipykernel>=7.1.0",
    "numba>=0.63.1",
    "pip>=25.3",
    "pycountry>=24.6.1",
    "pykernel>=0.1.6",
]
